tests/ui/rfcs/rfc-2632-const-trait-impl/tilde-twice.stderr
error: expected identifier, found `~`
  --> $DIR/tilde-twice.rs:5:20
   |
LL | struct S<T: ~const ~const Tr>;
   |                    ^ expected identifier

error: aborting due to previous error

